# bookie

./: .coveragerc  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
bookie/: arg_parser.py  currency.py  main.py  models.py  summary.py
tests/: test_arg_parser.py  test_currency.py  test_main.py  test_models.py  test_summary.py
