[tool.poetry]
name = "bookie"
version = "0.1.0"
description = "Bookeeping manager"
authors = ["Nate Ferreira <nferreira1729@gmail.com>"]
license = "GPL2"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
